# Unmanned-Ground-Vehicle

./: CMakeLists.txt  README.md  amcl.launch  movetogoal.py  mymap.yaml  navigation.launch  package.xml  pt3a_base_driver.launch  robot_base_drive.launch
catkin_ws/src/launch/: move_base_priormap.launch  pt3a_base_driver (copy).launch
catkin_ws/src/rviz/: pt3a.rviz
joystick_controller/src/: teleop_twist_joy.cpp
pt3a_2dnav/config (copy)/: base_local_planner_params.yml  costmap_common_params.yml
pt3a_2dnav/launch/: move_base.launch
rviz/: navigation.rviz
