<?xml version="1.0"?>
<package>
  <name>pt3a_launch</name>
  <version>0.0.0</version>
  <description>The pt3a_launch package</description>
  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
